--- a/site-de-vendas/compras.html
+++ b/site-de-vendas/compras.html
@@ -7,10 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página home</h1>
-    <h2>Aprendendo git e github</h2>
-    <a href="vendas.html">Ir para a página de vendas</a>
-    <br>
-    <a href="compras.html">Ir para apágina de compras</a>
+    <h1>Páginas de compras</h1>
+    <p>Valor da compra = R$ 1000,00</p>
+    <a href="index.html">Voltar para a tela inicial</a>
 </body>
 </html>
